# GPS

./: .gitignore  Cargo.toml  README-DEPLOY-ONLINE.md  README-DEPLOY.md  README.md  SETUP-RAPIDO.md  deploy-to-server.ps1  deploy-to-server.sh  deploy.ps1  install-service.ps1  nginx.conf  run-offline.ps1  start.ps1  systemd-service.conf  uninstall-service.ps1
.github/workflows/: deploy.yml
crates/avila-geo/: Cargo.toml
crates/avila-geo/src/: lib.rs
crates/avila-json/: Cargo.toml
crates/avila-json/src/: lib.rs
src/: main.rs
static/: index.html
