[package]
name = "device-location-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Nícolas Ávila <avilaops@gmail.com>"]
description = "Device GPS Location Tracker - 100% using Arxis ecosystem native dependencies"
license = "MIT OR Apache-2.0"

[dependencies]
# Using Arxis ecosystem native crates - ZERO external dependencies! 🚀
avila-json = { path = "crates/avila-json" }
avila-geo = { path = "crates/avila-geo" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
incremental = true
